WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35398
Race condition in JSPropertyNameIterator and Structure destruction
https://bugs.webkit.org/show_bug.cgi?id=35398
Summary
Race condition in JSPropertyNameIterator and Structure destruction
Oliver Hunt
Reported
2010-02-25 12:10:48 PST
Race condition in JSPropertyNameIterator and Structure destruction
Attachments
Patch
(6.49 KB, patch)
2010-02-25 12:21 PST
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-02-25 12:21:53 PST
Created
attachment 49516
[details]
Patch
Maciej Stachowiak
Comment 2
2010-02-25 12:28:53 PST
Comment on
attachment 49516
[details]
Patch r=me
Darin Adler
Comment 3
2010-02-25 12:45:50 PST
Comment on
attachment 49516
[details]
Patch
> + void setCachedStructure(Structure* structure)
How about PassRefPtr for this argument?
Oliver Hunt
Comment 4
2010-02-25 14:15:38 PST
Committed
r55256
: <
http://trac.webkit.org/changeset/55256
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug