JavaScriptCore/runtime/WeakGCPtr.h
@@ -65,6 +65,10 @@ public:
 
     WeakGCPtr& operator=(T*);
 
+#if !ASSERT_DISABLED
+    bool hasDeadObject() const { return !!m_ptr; }
+#endif
+
 private:
     void assign(T* ptr)
     {
